--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -5,6 +5,13 @@
 	background-color: #fff;
 }
 
+.flex-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
 .white {
 	color: #fff;
 }
@@ -96,4 +103,10 @@
 	font-size: 2em;
 	margin: 0;
 	margin-top: 1em;
+}
+
+select.drop {
+	color: #000 !important;
+	width: 80%;
+	margin-bottom: 2em;
 }
