--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -83,6 +83,10 @@
 	border-color: rgb(233, 68, 68);
 }
 
+button {
+	width: 100%;
+}
+
 .smlcard {
 	/* background-color: rgba(147, 25, 163, 1);
 	border-color: rgb(147, 25, 163); */
@@ -105,8 +109,71 @@
 	margin-top: 1em;
 }
 
-select.drop {
-	color: #000 !important;
+.drop {
+	color: #fff !important;
 	width: 80%;
-	margin-bottom: 2em;
+}
+
+.whitelabel {
+	color: #fff !important;
+}
+
+.columncust {
+	padding: 0 1em;
+}
+
+.moneyindicator {
+	font-size: 5em;
+}
+
+.form.amount {
+	border: solid 1px rgba(34, 34, 34, 0.315);
+	outline: none !important;
+	border-radius: 0.5em;
+}
+
+.form.amount:focus {
+	outline: none !important;
+	border: none !important;
+}
+
+input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, textarea:focus, select:focus {
+	border: none;
+}
+
+ul {
+	list-style: none;
+}
+
+/*li {
+	padding: .3em 0 1em 40px;
+	background-image: url('https://i.postimg.cc/nzpSVvwk/Group-2.png') no-repeat;
+	background-size: contain;
+} */
+
+li {
+	text-transform: capitalize;
+}
+
+.selectoption {
+	color: #222 !important;
+}
+
+.buttonLogin {
+	margin-top: 2em;
+	background-color: #1961FB;
+	color: rgba(255, 255, 255, 0.8);
+	font-size: 0.8em;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	border-radius: 5em;
+}
+
+.bhaimargin {
+	margin-bottom: 3em;
+	margin-top: 2em;
+}
+
+.title.ticket {
+	margin-bottom: 0.5em;
 }
