--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -5,7 +5,7 @@ http://ionicframework.com/docs/theming/ */
 
 :root {
 	/** primary **/
-	--ion-color-primary: #a71d89;
+	--ion-color-primary: #363996;
 	--ion-color-primary-rgb: 56, 128, 255;
 	--ion-color-primary-contrast: #ffffff;
 	--ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -75,7 +75,7 @@ http://ionicframework.com/docs/theming/ */
    */
 
 body {
-	--ion-color-primary: #9d20ad;
+	--ion-color-primary: #363996;
 	--ion-color-primary-rgb: 66, 140, 255;
 	--ion-color-primary-contrast: #ffffff;
 	--ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -137,9 +137,9 @@ body {
    */
 
 .ios body {
-	--ion-background-color: #222;
+	--ion-background-color: #fff;
 	--ion-background-color-rgb: 0, 0, 0;
-	--ion-text-color: #ffffff;
+	--ion-text-color: #222;
 	--ion-text-color-rgb: 255, 255, 255;
 	--ion-color-step-50: #0d0d0d;
 	--ion-color-step-100: #1a1a1a;
@@ -170,9 +170,9 @@ body {
    */
 
 .md body {
-	--ion-background-color: rgb(26, 26, 26);
-	--ion-background-color-rgb: 18, 18, 18;
-	--ion-text-color: #ffffff;
+	--ion-background-color: #fff;
+	--ion-background-color-rgb: 255, 255, 255;
+	--ion-text-color: #222;
 	--ion-text-color-rgb: 255, 255, 255;
 	--ion-border-color: #222222;
 	--ion-color-step-50: #1e1e1e;
@@ -191,7 +191,7 @@ body {
 	--ion-color-step-700: #b8b8b8;
 	--ion-color-step-750: #c4c4c4;
 	--ion-color-step-800: #d0d0d0;
-	--ion-color-step-850: #dbdbdb;
+	--ion-color-step-850: #222;
 	--ion-color-step-900: #e7e7e7;
 	--ion-color-step-950: #f3f3f3;
 	--ion-item-background: #1e1e1e;
