--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -137,9 +137,9 @@ body {
    */
 
 .ios body {
-	--ion-background-color: #fff;
+	--ion-background-color: #f0f3ff;
 	--ion-background-color-rgb: 0, 0, 0;
-	--ion-text-color: #222;
+	--ion-text-color: #363996;
 	--ion-text-color-rgb: 255, 255, 255;
 	--ion-color-step-50: #0d0d0d;
 	--ion-color-step-100: #1a1a1a;
@@ -170,9 +170,9 @@ body {
    */
 
 .md body {
-	--ion-background-color: #fff;
+	--ion-background-color: #f0f3ff;
 	--ion-background-color-rgb: 255, 255, 255;
-	--ion-text-color: #222;
+	--ion-text-color: #363996;
 	--ion-text-color-rgb: 255, 255, 255;
 	--ion-border-color: #222222;
 	--ion-color-step-50: #1e1e1e;
@@ -194,7 +194,7 @@ body {
 	--ion-color-step-850: #222;
 	--ion-color-step-900: #e7e7e7;
 	--ion-color-step-950: #f3f3f3;
-	--ion-item-background: #1e1e1e;
+	--ion-item-background: #363996;
 	--ion-toolbar-background: #1f1f1f;
 	--ion-tab-bar-background: #1f1f1f;
 }
